[package]
name = "e114_access"
version = "0.1.0"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = { version = "0.4", optional = true }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
# this crate is compatible with schemars 0.6.* and 0.7.*
schemars = { version =  ">=0.6", optional = true }
validator = { version = ">=0.10", features = ["phone", "unic"], optional = true }
validator_derive = { version = ">=0.10", features = ["phone", "unic"], optional = true }
# Strum Used in interest of time, might remove later if necessary.
strum = "0.18"
strum_macros = "0.18"
log = "0.4"
jsonwebtoken = "7.2.0"
url = "2.1.1"

[features]
default = ["validate"]
jsonschema = ["schemars"]
validate = ["validator","validator_derive","contracts"]
