[package]
name = "e114_access"
version = "0.1.2"
authors = ["Andras Mocsary <nobody@reedwolf.com>"]
edition = "2018"
repository = "https://github.com/element114/e114_core"
documentation = "https://docs.rs/e114_core"
license = "MIT OR Apache-2.0"
description = "A convenient wrapper around several rust web frameworks to isolate business logic from protocol handling."
publish = true

[dependencies]
contracts = { version = "0.6", optional = true }
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
# this crate is compatible with schemars 0.6.* and 0.7.*
schemars = { version =  ">=0.6", optional = true }
validator = { version = ">=0.11", features = ["phone", "unic"], optional = true }
validator_derive = { version = ">=0.10", features = ["phone", "unic"], optional = true }
# Strum Used in interest of time, might remove later if necessary.
strum = "0.19"
strum_macros = "0.19"
log = "0.4"
jsonwebtoken = "7.2.0"
url = "2.1.1"

[features]
default = ["validate"]
jsonschema = ["schemars"]
validate = ["validator","validator_derive","contracts"]
